--- a/app/pickbanscreen.css
+++ b/app/pickbanscreen.css
@@ -112,7 +112,7 @@
     text-align: center;
     border-radius: 5px;
     font-size: small;
-    min-width: 60px;
+    min-width: 70px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -125,7 +125,7 @@
     border-radius: 5px;
     text-decoration: line-through;
     font-size: small;
-    min-width: 60px;
+    min-width: 70px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -221,12 +221,31 @@
     margin: 10px;
     border-style: outset;
     min-width: 180px;
-    min-height: 150px;
-    max-height: 230px;
+    min-height: 180px;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.difficultyLevel {
+    font-size: large;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.heroStats {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0;
+}
+
+.heroStat {
+    float: left;
+    min-height: 20px;
 }
 
 .randomHeroInfo {
@@ -242,7 +261,7 @@
     height: 100%;
     border-radius: 20px;
     min-width: 200px;
-    min-height: 60px;
+    min-height: 70px;
     align-self: center;
     transition-duration: 1s;
     font-size: x-large;
