--- a/app/mainmenu.css
+++ b/app/mainmenu.css
@@ -62,6 +62,14 @@
     max-width: 80px;
 }
 
+.idInputField:invalid {
+    border: 4px solid red;
+}
+
+.idInputField:valid {
+    border: 4px solid green;
+}
+
 .joinButton {
     font-size: large;
     flex: 1;
