--- a/app/mainmenu.css
+++ b/app/mainmenu.css
@@ -10,6 +10,8 @@
     gap: 20px;
     justify-self: center;
     background-color: lightgray;
+    margin: 5px auto;
+    max-width: fit-content;
     padding: 20px;
 }
 
