--- a/app/pickbanscreen.css
+++ b/app/pickbanscreen.css
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%
 }
 
 .pickBanScreen {
@@ -205,8 +206,9 @@
 }
 
 .heroInfo {
+    flex: 1;
     padding: 10px;
-    min-height: 140px;
+    min-height: 80px;
 
     border-style: solid;
     border-color: black;
@@ -227,42 +229,69 @@
 }
 
 .heroName {
-    flex: 1;
     display: flex;
     align-items: center;
 }
 
 .difficultyLevel {
-    color: darkred;
-    flex: 1;
+    color: yellow;
+    text-shadow:
+        -1px -1px 2px black,
+        0px -1px 2px black,
+        1px -1px 2px black,
+        -1px 0px 2px black,
+        1px 0px 2px black,
+        -1px 1px 2px black,
+        0px 1px 2px black,
+        1px 1px 2px black;
     font-size: medium;
     display: flex;
     justify-content: center;
+    margin: 0px 0px 5px;
 }
 
 .heroStats {
-    flex: 1;
-    display: grid;
-    justify-content: center;
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 100%;
+    max-width: 200px;
 }
 
 .heroStat {
+    flex: 1;
     display: flex;
-    justify-self: end;
     gap: 5px;
 }
 
-.heroStatPips {
-    min-height: 20px;
-    grid-template-rows: repeat(auto-fill, 1fr);
-    grid-template-columns: repeat(auto-fill, 1fr);
+.heroStatName {
     display: flex;
-    gap: 2px;
+    align-items: center;
+    font-family: monospace;
+    font-size: smaller;
+    font-weight: bolder;
+}
+
+.heroStatPips {
+    flex: 3;
+    display: flex;
+}
+
+.statPipBox {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    margin: 1px;
+    justify-content: center;
 }
 
 .statPip {
-    width: 10px;
-    height: 10px;
+    flex: 1;
+    min-width: 5px;
+    max-width: 15px;
+    min-height: 8px;
+    max-height: 30px;
     border-radius: 4px;
     border-width: 2px;
     border-style: solid;
