--- a/app/pickbanscreen.css
+++ b/app/pickbanscreen.css
@@ -69,6 +69,7 @@
     padding: 10px;
     gap: 5px;
     min-height: 140px;
+    font-size: smaller;
 }
 
 .teamBPicksAndBans {
@@ -84,10 +85,18 @@
 }
 
 .teamAStatus {
-    font-size: large;
-    color: white;
-    flex: 1;
     background-color: var(--team-a-color);
+    text-align: center;
+    min-height: 22px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-weight: bolder;
+}
+
+.teamBStatus {
+    font-weight: bolder;
+    background-color: var(--team-b-color);
     text-align: center;
     min-height: 22px;
     display: flex;
@@ -95,16 +104,41 @@
     justify-content: center;
 }
 
-.teamBStatus {
-    color: white;
-    font-size: large;
+.teamStats {
     flex: 1;
-    background-color: var(--team-b-color);
-    text-align: center;
-    min-height: 22px;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+    gap: 5px;
+}
+
+.teamStat {
+    align-self: center;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    gap: 2px;
+    align-items: stretch;
+    max-height: 10px;
+}
+
+.teamStatName {
+    align-self: center;
+    font-family: monospace;
+    font-weight: bolder;
+    font-size: smaller;
+}
+
+.teamStatBar {
+    flex: 1;
+    border-width: 2px;
+    border-style: solid;
+    display: flex;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.teamStatPip {
+    flex: 1;
+    width: auto;
 }
 
 .heroCard {
@@ -134,7 +168,7 @@
 }
 
 .pickrow>div {
-    background-color: white;
+    background-color: lightgray;
     flex: 3;
     text-align: center;
     border-radius: px;
@@ -148,7 +182,7 @@
 
 .banrow>div {
     flex: 1;
-    background-color: white;
+    background-color: lightgray;
     text-align: center;
     border-radius: 5%;
     border-style: solid;
@@ -206,6 +240,7 @@
 }
 
 .heroInfo {
+    background-color: lightgrey;
     flex: 1;
     padding: 10px;
     min-height: 100px;
@@ -218,22 +253,23 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: top;
     align-items: center;
 }
 
 .randomHeroInfo {
-    background-color: lightgrey;
     font-size: xx-large;
     justify-content: center;
 }
 
 .heroName {
+    flex: 1;
     display: flex;
     align-items: center;
+    font-weight: bolder;
 }
 
 .difficultyLevel {
+    flex: 1;
     color: yellow;
     text-shadow:
         -1px -1px 2px black,
@@ -247,14 +283,12 @@
     font-size: medium;
     display: flex;
     justify-content: center;
-    margin: 0px 0px 5px;
 }
 
 .heroStats {
     flex: 2;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
     width: 100%;
     max-width: 200px;
 }
@@ -263,6 +297,7 @@
     flex: 1;
     display: flex;
     gap: 5px;
+    max-height: 20px;
 }
 
 .heroStatName {
@@ -291,20 +326,20 @@
     min-width: 5px;
     max-width: 15px;
     min-height: 8px;
-    max-height: 30px;
+    max-height: 25px;
     border-radius: 4px;
     border-width: 2px;
     border-style: solid;
 }
 
 .fullPip {
-    background-color: orange;
+    background-color: green;
 }
 
 .lightPip {
-    background-color: khaki;
+    background-color: lightgreen;
 }
 
 .offPip {
-    background-color: darkgray;
+    background-color: whitesmoke;
 }
